fix: stretch the Dialog form
Fix incorrect form height when the dialog is taller than the form contents.

--- a/packages/pelagos/src/components/Dialog.less
+++ b/packages/pelagos/src/components/Dialog.less
@@ -106,6 +106,10 @@
 			height: 100%;
 		}
 
+		&__form {
+			flex: 1;
+		}
+
 		&__title {
 			@heading-03();
 			@ellipsis();
